--- a/package.json
+++ b/package.json
@@ -3,6 +3,17 @@
   "version": "1.0.0",
   "description": "A Node.js application that monitors Nintendo Switch 2 stock availability at Costco",
   "main": "src/index.js",
+  "scripts": {
+    "start": "node src/index.js",
+    "dev": "node src/index.js"
+  },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "axios": "^1.9.0",
+    "cheerio": "^1.1.0",
+    "dotenv": "^16.5.0",
+    "node-cron": "^4.1.0",
+    "resend": "^4.5.2"
+  }
 } 
